--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "mongoose": "^8.6.1",
     "nodemailer": "^6.9.15",
     "parse-dashboard": "^5.4.0",
-    "parse-server": "^7.2.0"
+    "parse-server": "^7.2.0",
+    "path": "^0.12.7"
   }
 }
